[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/BlockOpen.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Block.gd" type="Script" id=2]
[ext_resource path="res://Scripts/VelocityArrow.gd" type="Script" id=3]
[ext_resource path="res://Scripts/AccelerationArrow.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 37, 37 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1);
uniform float line_thickness : hint_range(0, 10) = 1.0;

uniform vec4 obj_color: hint_color = vec4(1.);

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	
	float outline = texture(TEXTURE, UV + vec2(-size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, 0)).a;
	outline += texture(TEXTURE, UV + vec2(0, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, size.y)).a;
	outline += texture(TEXTURE, UV + vec2(-size.x, -size.y)).a;
	outline += texture(TEXTURE, UV + vec2(size.x, -size.y)).a;
	outline = min(outline, 1.0);
	
	vec4 color = vec4(obj_color.rgb, texture(TEXTURE, UV).a);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/line_color = Color( 0.960784, 0.631373, 0.631373, 1 )
shader_param/line_thickness = 0.0
shader_param/obj_color = Color( 0.305882, 0.14902, 0.211765, 1 )

[node name="Block" type="KinematicBody2D" groups=["Moveable"]]
collision_layer = 3
input_pickable = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="VelocityArrow" parent="." instance=ExtResource( 5 )]
modulate = Color( 0, 1, 0.0392157, 1 )
script = ExtResource( 3 )
target = NodePath("..")

[node name="AccArrow" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 0.960784, 0, 1 )
script = ExtResource( 4 )
target = NodePath("..")

[node name="MovementTween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Ball_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Ball_mouse_exited"]
